# query-caching

./: .gitignore  all_execs.sh  build.gradle  config.json  gradlew  settings.gradle
analysis/: analysis.py  derivative_wise.py  pyproject.toml  query_analysis.py  result_parser.py
src/main/java/: Main.java  OutputStream.java  Tester.java  Window.java  WindowMultiCache.java
src/main/java/batch/: QueryBatcher.java
src/main/java/cache/: Cache.java  CacheItem.java
src/main/java/cache/builder/: CacheBuilder.java
src/main/java/cache/dim/: Dimension.java
src/main/java/cache/enums/: CacheType.java  DimensionType.java
src/main/java/cache/models/: AbstractCachePolicy.java  CacheItem.java
src/main/java/cache/policy/fifo/: FifoCachePolicy.java
src/main/java/cache/policy/lfu/: LFUCachePolicy.java
src/main/java/cache/policy/lru/: LRUPolicy.java  _LRUPolicy.java
src/main/java/cache/policy/mru/: MRUPolicy.java
src/main/java/cache/policy/rr/: RRPolicy.java
src/main/java/common/: CalciteConfiguration.java  Evaluator.java  QueryExecutor.java  QueryUtils.java  Utils.java
src/main/java/enums/: Mode.java  QueryType.java
src/main/java/mv/: CustomTableScan.java  LatticeTest.java  MViewOptimizer.java
src/main/java/test/: QueryProvider.java  QueryReader.java
src/main/java/utils/: CacheBuilder.java  Configuration.java  FileUtils.java  WindowRunUtils.java  WindowRunUtilsList.java
