[tool.poetry]
name = "analysis-mqo"
version = "0.1.0"
description = ""
authors = ["nodejk <krishna.docs.api@gmail.com>"]
readme = "README.md"
packages = [{include = "analysis_mqo"}]

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
matplotlib = "^3.8.0"
pyparsing = "^3.1.1"
pandas = "^2.1.1"
seaborn = "^0.13.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
